--- a/views/includes/recommendation.pug
+++ b/views/includes/recommendation.pug
@@ -1,11 +1,7 @@
 if songs && songs.length > 0
     for song in songs
-      li.w-60.h-fit.p-2.truncate(value=song.id)
-        img.w-60.h-60.aspect-square(src=song.thumbnail alt=song.title)
-        a.text-xl.tracking-wider.py-4.text-sky-400.truncate(href=song.url)= song.title
-        p= song.release_date
-
+      li.w-60.h-fit.p-2(value=song.id)
+        img.w-48.h-48.mx-auto.md_w-60.md_h-60.aspect-square(src=song.thumbnail alt=song.title)
+        a.md_w-full.w-48.text-xl.mx-auto.tracking-wider.truncate.block(href=song.url target="_blank" style="color: #eb6f92")= song.title
+        p.md_w-full.w-48.mx-auto.text-base(style="color: #e0def4")= song.release_date
     input.hidden(type="hidden" value= songs[songs.length - 1].id name="id")
-else
-  p.tracking-wide.text-lg Press the button above to get some recommendations...
-
