--- a/views/index.pug
+++ b/views/index.pug
@@ -4,19 +4,13 @@ html(lang="en")
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0")
-    link(href="./styles/style.css", rel="stylesheet")
-    title HTMX DEEZ NUTS  
-    include includes/new-recommendation
-    button.px-4.py-4.mx-auto#loadMore(
-      hx-target="#newSongRecommendation" 
-      hx-trigger="click" 
-      hx-indicator="#loading"
-      hx-post="/api/recommend-songs"
-      hx-include="[name='id']"
-      hx-swap="afterbegin"
-    ) Load more
-    ul.grid.place-items-center.grid-cols-3.w-full.h-full.mx-auto#newSongRecommendation
-  body
+    link(href="./styles/style.css" rel="stylesheet")
+    title HTMX DEEZ  
+    link(rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-solid-straight/css/uicons-solid-straight.css')
+    link(rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css')
     script(src="https://unpkg.com/htmx.org@1.3.1")
     script(src="https://unpkg.com/hyperscript.org@0.0.5")
     script(src="https://unpkg.com/htmx.org/dist/ext/loading-states.js")
+  body.w-full.h-screen.overflow-x-hidden(style="background-color: #191724")#app
+    include includes/new-recommendation
+    ul.py-8.md_py-3.lg_py-0.grid.place-items-center.grid-cols-1.md_grid-cols-2.xl_grid-cols-3.w-full.song-height.mx-auto#newSongRecommendation
